# otus-cmake_googletests

./: .gitignore  CMakeLists.txt  README.md
doc/: meeting_saved_chat-12995-87e5a4.txt
doc/source-12995-f22a4c/examples/: CMakeLists.txt
doc/source-12995-f22a4c/project_gtest_by_cmake/: CMakeLists.txt.in
doc/source-12995-f22a4c/project_with_gtest/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
